<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookmarkPlaces</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="remarks">Remarks</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="map_view">Map View</string>

</resources>
